removes footer and corrects page overflow

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -43,7 +43,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, .5);
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .services .text-container {
@@ -52,12 +52,17 @@
 
 .stats {
   position: relative;
-  top: -80px;
+  margin-top: -80px;
 }
 
 .contact {
   position: relative;
-  top: -80px;
+  margin-top: -80px;
+}
+
+.footer {
+  position: relative;
+  margin-top: -80px;
 }
 
 .project-modals .modal-dialog {
